--- a/trunk/plugins/org.chromium.debug.core/plugin.properties
+++ b/trunk/plugins/org.chromium.debug.core/plugin.properties
@@ -5,3 +5,6 @@
 providerName = The Chromium Authors
 
 pluginName = Chromium JavaScript Remote Debugger Core
+
+SourceNameMapperContainer.name = JavaScript Source Name Mapper
+SourceNameMapperContainer.description = Transforms name of source and delegates lookup to another source container.
