Add source name mapper source container
Review URL: http://codereview.chromium.org/2249006

--- a/plugins/org.chromium.debug.core/plugin.properties
+++ b/plugins/org.chromium.debug.core/plugin.properties
@@ -5,3 +5,6 @@
 providerName = The Chromium Authors
 
 pluginName = Chromium JavaScript Remote Debugger Core
+
+SourceNameMapperContainer.name = JavaScript Source Name Mapper
+SourceNameMapperContainer.description = Transforms name of source and delegates lookup to another source container.
