--- a/trunk/.gitignore
+++ b/trunk/.gitignore
@@ -6,4 +6,7 @@ plugins/org.chromium.sdk.tests/.settings
 plugins/org.chromium.sdk.tests/bin
 plugins/org.chromium.sdk/.settings
 plugins/org.chromium.sdk/bin
-
+plugins/org.chromium.sdk/build-output
+utils/org.chromium.sdk.tests.system/.settings
+utils/org.chromium.sdk.tests.system/bin
+utils/org.chromium.sdk.tests.system/build-output
