--- a/v0.1.6/plugins/org.chromium.debug.core/plugin.xml
+++ b/v0.1.6/plugins/org.chromium.debug.core/plugin.xml
@@ -76,5 +76,14 @@
     </sourceContainerType>
    </extension>
   
+  <extension point="org.eclipse.core.expressions.propertyTesters">
+    <propertyTester
+       namespace="org.chromium.debug.core"
+       id="org.chromium.debug.core.FilePropertyTester"
+       properties="isJsFile"
+       type="org.eclipse.core.resources.IFile"
+       class="org.chromium.debug.core.FilePropertyTester">
+     </propertyTester>
+  </extension>
 
 </plugin>
