--- a/v0.1.6/plugins/org.chromium.debug.ui/plugin.properties
+++ b/v0.1.6/plugins/org.chromium.debug.ui/plugin.properties
@@ -13,3 +13,6 @@ consolePseudoLaunchName = Browser Connection
 ChromiumJavascriptDecorator.label = Chromium JavaScript Decorator
 
 OpenFunctionAction.label = Open Function
+
+BreakpointProperties.name = Breakpoint Properties
+V8JsScriptProperties.name = V8 JS Script
