Add V8-Script-related properties to UI
Review URL: http://codereview.chromium.org/2872006

--- a/plugins/org.chromium.debug.ui/plugin.properties
+++ b/plugins/org.chromium.debug.ui/plugin.properties
@@ -13,3 +13,6 @@ consolePseudoLaunchName = Browser Connection
 ChromiumJavascriptDecorator.label = Chromium JavaScript Decorator
 
 OpenFunctionAction.label = Open Function
+
+BreakpointProperties.name = Breakpoint Properties
+V8JsScript.name = V8 JS Script
