Uncomment live edit actions and change labels
Review URL: http://codereview.chromium.org/2873065

--- a/plugins/org.chromium.debug.ui/plugin.properties
+++ b/plugins/org.chromium.debug.ui/plugin.properties
@@ -16,3 +16,8 @@ OpenFunctionAction.label = Open Function
 
 BreakpointProperties.name = Breakpoint Properties
 V8JsScript.name = V8 JS Script
+
+ChromiumSourceFileActionsId.menu.label = V8 Debugging
+LiveEditWizardAction.label = Preview and Push Source Changes to VM...
+PushChangesAction.label = Push Source Changes to VM
+ 
