--- a/plugins/org.chromium.debug.ui/plugin.properties
+++ b/plugins/org.chromium.debug.ui/plugin.properties
@@ -13,6 +13,7 @@ consolePseudoLaunchName = Browser Connection
 ChromiumJavascriptDecorator.label = Chromium JavaScript Decorator
 
 OpenFunctionAction.label = Open Function
+LoadFullValueAction.label = Load Full Value
 
 BreakpointProperties.name = Breakpoint Properties
 V8JsScript.name = V8 JS Script
