--- a/plugins/org.chromium.debug.ui/plugin.properties
+++ b/plugins/org.chromium.debug.ui/plugin.properties
@@ -22,3 +22,11 @@ ChromiumSourceFileActionsId.menu.label = V8 Debugging
 LiveEditWizardAction.label = Preview and Push Source Changes to VM...
 PushChangesAction.label = Push Source Changes to VM
  
+SynchronizeBreakpoints.menu.label = Synchronize JavaScript Breakpoints
+SynchronizeBreakpoints.ResetRemote.label = Reset on Remote 
+SynchronizeBreakpoints.ResetLocal.label = Reset on Local 
+SynchronizeBreakpoints.Merge.label = Merge Remote and Local
+
+ExceptionBreakpoints.menu.label = Break on JavaScript Exceptions
+ExceptionBreakpoints.Caught.label = Caught  
+ExceptionBreakpoints.Uncaught.label = Uncaught
