--- a/trunk/plugins/org.chromium.debug.jsdtbridge/plugin.xml
+++ b/trunk/plugins/org.chromium.debug.jsdtbridge/plugin.xml
@@ -9,8 +9,13 @@
 
 <plugin>
    <extension
-         point="org.chromium.debug.core.model.JavaScriptBreakpointAdapter">
+         point="org.chromium.debug.core.model_JavaScriptBreakpointAdapter">
       <breakpointAdapter class="org.chromium.debug.jsdtbridge.JsdtBreakpointAdapter"/>
+   </extension>
+
+   <extension
+         point="org.chromium.debug.core.model_JavaScriptFormatter">
+      <formatter class="org.chromium.debug.jsdtbridge.JsdtFormatterBridge"/>
    </extension>
 
 </plugin>
