--- a/trunk/plugins/org.chromium.debug.ui/plugin.xml
+++ b/trunk/plugins/org.chromium.debug.ui/plugin.xml
@@ -271,6 +271,13 @@
                enablesFor="1"
                id="org.chromium.debug.ui.actions.PushChangesAction">
          </action>
+         <action
+               label="(under construction) Temporary Format Source"
+               class="org.chromium.debug.ui.actions.TemporaryFormatSourceAction"
+               menubarPath="org.chromium.debug.ui.ChromiumSourceFileActionsId.MenuId/group0"
+               enablesFor="1"
+               id="org.chromium.debug.ui.actions.BeautifySourceAction">
+         </action>
       </objectContribution>
   </extension>
 
