--- a/trunk/plugins/org.chromium.debug.ui/plugin.properties
+++ b/trunk/plugins/org.chromium.debug.ui/plugin.properties
@@ -14,6 +14,7 @@ ChromiumJavascriptDecorator.label = Chromium JavaScript Decorator
 
 OpenFunctionAction.label = Open Function
 LoadFullValueAction.label = Load Full Value
+TemporaryFormatAction.label = Temporary Format Source
 
 BreakpointProperties.name = Breakpoint Properties
 V8JsScript.name = V8 JS Script
