Fix some bugs before release
Review URL: http://codereview.chromium.org/5505001

--- a/plugins/org.chromium.debug.ui/plugin.properties
+++ b/plugins/org.chromium.debug.ui/plugin.properties
@@ -17,7 +17,7 @@ LoadFullValueAction.label = Load Full Value
 TemporarilyFormatAction.label = Temporarily Format Source
 
 BreakpointProperties.name = Breakpoint Properties
-V8JsScript.name = V8 JS Script
+V8JsScript.name = V8 JavaScript Script
 
 ChromiumSourceFileActionsId.menu.label = V8 Debugging
 LiveEditWizardAction.label = Preview and Push Source Changes to VM...
@@ -25,9 +25,9 @@ PushChangesAction.label = Push Source Changes to VM
  
 SynchronizeBreakpoints.menu.label = Synchronize JavaScript Breakpoints
 SynchronizeBreakpoints.ResetRemote.label = Reset on Remote 
-SynchronizeBreakpoints.ResetLocal.label = Reset on Local 
+SynchronizeBreakpoints.ResetLocal.label = Reset on Local
 SynchronizeBreakpoints.Merge.label = Merge Remote and Local
 
 ExceptionBreakpoints.menu.label = Break on JavaScript Exceptions
-ExceptionBreakpoints.Caught.label = Caught  
+ExceptionBreakpoints.Caught.label = Caught
 ExceptionBreakpoints.Uncaught.label = Uncaught
