--- a/features/org.chromium.source/build.properties
+++ b/features/org.chromium.source/build.properties
@@ -5,3 +5,4 @@ bin.includes = feature.xml,\
 
 generate.feature@org.chromium.sdk.source=org.chromium.sdk
 generate.feature@org.chromium.debug.source=org.chromium.debug
+generate.feature@org.chromium.debug.jsdtbridge.source=org.chromium.debug.jsdtbridge
