--- a/trunk/plugins/org.chromium.debug/about.properties
+++ b/trunk/plugins/org.chromium.debug/about.properties
@@ -7,4 +7,4 @@ blurb=Chromium JavaScript Remote Debugger\n\
 Version: {featureVersion}\n\
 \n\
 Copyright (c) 2009 The Chromium Authors. All rights reserved.\n\
-Visit http://code.google.com/p/chromedevtools for more info
+Visit http://code.google.com/p/chromedevtools for more info.
