--- a/trunk/plugins/org.chromium.debug.ui/plugin.properties
+++ b/trunk/plugins/org.chromium.debug.ui/plugin.properties
@@ -14,7 +14,7 @@ ChromiumJavascriptDecorator.label = Chromium JavaScript Decorator
 
 OpenFunctionAction.label = Open Function
 LoadFullValueAction.label = Load Full Value
-PinPointValueAction.label = Pin-Point Value
+PinPointValueAction.label = Pin-Point Value...
 TemporarilyFormatAction.label = Temporarily Format Source
 
 BreakpointProperties.name = Breakpoint Properties
