Rynda protocol interfaces
Review URL: http://codereview.chromium.org/6538099

--- a/plugins/org.chromium.sdk/build.properties
+++ b/plugins/org.chromium.sdk/build.properties
@@ -3,6 +3,7 @@ bin.includes = META-INF/,\
                lib/,\
                LICENSE
 jars.compile.order = .
-source.. = src/
+source.. = src/,\
+           src-rynda/
 output.. = bin/
 src.includes = LICENSE
