Rename Rynda -> Wip
Review URL: http://codereview.chromium.org/6683048

--- a/plugins/org.chromium.sdk/build.properties
+++ b/plugins/org.chromium.sdk/build.properties
@@ -4,6 +4,6 @@ bin.includes = META-INF/,\
                LICENSE
 jars.compile.order = .
 source.. = src/,\
-           src-rynda/
+           src-wip/
 output.. = bin/
 src.includes = LICENSE
