--- a/plugins/org.chromium.sdk.tests/.classpath
+++ b/plugins/org.chromium.sdk.tests/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="src-dynamic-impl/v8"/>
+	<classpathentry kind="src" path="src-dynamic-impl/bridge"/>
 	<classpathentry kind="src" path="src-wip"/>
 	<classpathentry kind="src" path="src-dynamic-impl/parser"/>
 	<classpathentry kind="output" path="bin"/>
