Prepare WIP base classes for generated protocol interfaces
Review URL: http://codereview.chromium.org/6864027

--- a/plugins/org.chromium.sdk/.classpath
+++ b/plugins/org.chromium.sdk/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src-wip-generated"/>
 	<classpathentry kind="src" path="src-dynamic-impl/bridge"/>
 	<classpathentry kind="src" path="src-dynamic-impl/parser"/>
 	<classpathentry kind="src" path="src-wip"/>
